# episteme

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
scripts/: gen_classes.py
src/episteme/: __about__.py  __init__.py  parser.py
src/episteme/grammar/: cc.lark  core.lark  lexical.lark
tests/: epi_script.epic  test_parser.py
