[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "episteme"
dynamic = ["version"]
description = 'Expressive Programming In STEM Education'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "tom65536", email = "peregrinus@planet.ms" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lark~=1.2"
]

[project.urls]
Documentation = "https://github.com/unknown/episteme#readme"
Issues = "https://github.com/unknown/episteme/issues"
Source = "https://github.com/unknown/episteme"

[tool.hatch.version]
path = "src/episteme/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/episteme tests}"

[tool.coverage.run]
source_pkgs = ["episteme", "tests"]
branch = true
parallel = true
omit = [
  "src/episteme/__about__.py",
]

[tool.coverage.paths]
episteme = ["src/episteme", "*/episteme/src/episteme"]
tests = ["tests", "*/episteme/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
